remove jvm-opts